{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 19,
  "lineage": "ee10b877-2011-47e3-b32f-6e447dea33d6",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/networkInterfaces/terraform-nic",
            "internal_domain_name_suffix": "hy1utfoxy2iuhkmnsspnsknlue.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/virtualNetworks/terraform/subnets/sub1"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-19-AB-C7",
            "name": "terraform-nic",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "terraform_rg",
            "virtual_machine_id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Compute/virtualMachines/terraform-vm002"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/networkSecurityGroups/terraform-nsg1",
            "location": "eastus",
            "name": "terraform-nsg1",
            "resource_group_name": "terraform_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/networkSecurityGroups/terraform-nsg1/securityRules/ssh",
            "name": "ssh",
            "network_security_group_name": "terraform-nsg1",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "terraform_rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mypub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/publicIPAddresses/mupub1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mupub1",
            "resource_group_name": "terraform_rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/virtualNetworks/terraform/subnets/sub1",
            "name": "sub1",
            "resource_group_name": "terraform_rg",
            "virtual_network_name": "terraform"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/virtualNetworks/terraform/subnets/sub1",
            "network_security_group_id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/networkSecurityGroups/terraform-nsg1",
            "subnet_id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/virtualNetworks/terraform/subnets/sub1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9549373e-c7d7-4311-a98d-949ed929aba4",
            "id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/virtualNetworks/terraform",
            "location": "eastus",
            "name": "terraform",
            "resource_group_name": "terraform_rg",
            "subnet": [
              {
                "address_prefix": "10.10.1.0/24",
                "id": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/virtualNetworks/terraform/subnets/sub1",
                "name": "sub1",
                "security_group": "/subscriptions/11e07d93-b7de-44c1-b006-7218b5fb3180/resourceGroups/terraform_rg/providers/Microsoft.Network/networkSecurityGroups/terraform-nsg1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}